--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <h1 class="title title_filter">проекты<span>.</span> </h1>
         <!-- buttons for switching the filter -->
         <div id="myBtnContainer">
-          <button class="btn subtitle  active" onclick="filterSelection('all')">все проекты</button>
+<!--           <button class="btn subtitle  active" onclick="filterSelection('all')">все проекты</button>
           <button class="btn subtitle" onclick="filterSelection('info')">инфографика</button>
           <button class="btn subtitle" onclick="filterSelection('ux/ui')">ux/ui</button>
-          <button class="btn subtitle" onclick="filterSelection('social-media')">social media</button>
+          <button class="btn subtitle" onclick="filterSelection('social-media')">social media</button> -->
           <!-- <button class="btn subtitle " onclick="filterSelection('graphic')">графический дизайн</button> -->
           <!-- <button class="btn subtitle " onclick="filterSelection('3D')">3D</button> -->
         </div>
